<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/retro_pattern" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:src="@drawable/github_splash" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:titleTextColor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Olu-Flourish Emmanuel"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/user_email"
                android:textColor="?android:subtitleTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                tools:text="flourishisnow@gmail.com"
                tools:targetApi="m" />
        </LinearLayout>

        <TextView
            android:id="@+id/user_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:titleTextColor"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            tools:text="Software Developer (Web and Mobile apps) and Electrical/Electronics Engineer."
            tools:targetApi="m" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:textColor="?android:titleTextColor"
                    tools:targetApi="m"
                    android:id="@+id/user_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="100" />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:textColor="?android:titleTextColor"
                    tools:targetApi="m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:textColor="?android:titleTextColor"
                    android:id="@+id/user_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="163"
                    tools:targetApi="m" />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:textColor="?android:titleTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="16sp"
                    tools:targetApi="m" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="horizontal">

                <TextView
                    android:textColor="?android:titleTextColor"
                    tools:targetApi="m"
                    android:id="@+id/user_repos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="100" />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:textColor="?android:titleTextColor"
                    tools:targetApi="m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repos"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:textColor="?android:titleTextColor"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            tools:targetApi="m" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="?android:titleTextColor"
                tools:targetApi="m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:text="@string/url" />

            <TextView
                android:layout_marginLeft="4dp"
                android:textColor="?android:titleTextColor"
                tools:targetApi="m"
                android:id="@+id/user_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                tools:text="https://github.com/oluflourish" />

        </LinearLayout>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/more_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/more_details"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>